manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: psergeiupworkdevempowerid 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psergeiupworkdevempowerid
  template:
    metadata:
      labels:
        app: psergeiupworkdevempowerid 
    spec:
      containers:
        - name: psergeiupworkdevempowerid 
          image: prognimakdevaksregistry.azurecr.io/psergeiupworkdevempowerid
          ports:
          - containerPort: 80
