manifests/services.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: website
    name: website
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: website

---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: gateway
    name: gateway
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: gateway

---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: posts-service
    name: posts-service
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: posts-service

---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: comments-service
    name: comments-service
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: comments-service
