manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(api/.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
         
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
